first pass of percentChange

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,8 @@
 # ipython notebook files #
 ##########################
 *.ipynb
+
+##########################
+#    temporary files     #
+##########################
+*.pyc
