working version of Great Riddle Gate

--- a/.gitignore
+++ b/.gitignore
@@ -2,9 +2,14 @@
 ##########################
 # ipython notebook files #
 ##########################
-*.ipynb
+#  *.ipynb
 
 ##########################
 #    temporary files     #
 ##########################
 *.pyc
+
+##########################
+#       data files       #
+##########################
+*.h5
