--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,7 @@
 ##########################
 # ipython notebook files #
 ##########################
-#  *.ipynb
+  *.ipynb
 *-checkpoint.ipynb
 
 ##########################
@@ -14,3 +14,5 @@
 #       data files       #
 ##########################
 *.h5
+*.csv
+*.xlsx
